--- a/about.html
+++ b/about.html
@@ -75,7 +75,6 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
         </div>
 
         <div class="row">
@@ -83,33 +82,30 @@
             <img src="assets/img/about.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content">
-            <h3>Illustrator &amp; UI/UX Designer</h3>
+            <h3>Full stack developer</h3>
             <p class="font-italic">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-              magna aliqua.
+              Hi, I'm Celestino Caterino, I was born in Naples, Italy. I'm 20 years old and I have been coding since I was 13. I currently work as a Full Stack Developer.
             </p>
             <div class="row">
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-rounded-right"></i> <strong>Birthday:</strong> 1 May 1995</li>
-                  <li><i class="bi bi-rounded-right"></i> <strong>Website:</strong> www.example.com</li>
-                  <li><i class="bi bi-rounded-right"></i> <strong>Phone:</strong> +123 456 7890</li>
-                  <li><i class="bi bi-rounded-right"></i> <strong>City:</strong> City : New York, USA</li>
+                  <li><i class="bi bi-rounded-right"></i> <strong>Birthday:</strong> 23 May 2001</li>
+                  <li><i class="bi bi-rounded-right"></i> <strong>Website:</strong> celestinocaterino.github.io</li>
+                  <li><i class="bi bi-rounded-right"></i> <strong>Phone:</strong> +39 3450640357</li>
                 </ul>
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-rounded-right"></i> <strong>Age:</strong> 30</li>
-                  <li><i class="bi bi-rounded-right"></i> <strong>Degree:</strong> Master</li>
-                  <li><i class="bi bi-rounded-right"></i> <strong>PhEmailone:</strong> email@example.com</li>
-                  <li><i class="bi bi-rounded-right"></i> <strong>Freelance:</strong> Available</li>
+                  <li><i class="bi bi-rounded-right"></i> <strong>Age:</strong> 20</li>
+                  <li><i class="bi bi-rounded-right"></i> <strong>Email:</strong> celestecaterino@gmail.com </li>
+                  <li><i class="bi bi-rounded-right"></i> <strong>Freelance:</strong> Not available</li>
                 </ul>
               </div>
             </div>
-            <p>
+           <!--  <p>
               Officiis eligendi itaque labore et dolorum mollitia officiis optio vero. Quisquam sunt adipisci omnis et ut. Nulla accusantium dolor incidunt officia tempore. Et eius omnis.
               Cupiditate ut dicta maxime officiis quidem quia. Sed et consectetur qui quia repellendus itaque neque. Aliquid amet quidem ut quaerat cupiditate. Ab et eum qui repellendus omnis culpa magni laudantium dolores.
-            </p>
+            </p> -->
           </div>
         </div>
 
