--- a/resume.html
+++ b/resume.html
@@ -93,27 +93,27 @@
             <h3 class="resume-title">Education</h3>
             
             <div class="resume-item">
-              <h4>Bachelor of Fine Arts &amp; Graphic Design</h4>
-              <h5>2010 - 2014</h5>
-              <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-              <p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel ratione eius unde vitae rerum voluptates asperiores voluptatem Earum molestiae consequatur neque etlon sader mart dila</p>
+              <h4>High school graduation in computer science</h4>
+              <h5>2015 - 2020</h5>
+              <p><em>IT GIulio Cesare Falco, Capua, CE (Italy)</em></p>
+              <p>Final vote: 100/100</p>
             </div>
           </div>
           <div class="col-lg-6">
             <h3 class="resume-title">Professional Experience</h3>
             
             <div class="resume-item">
-              <h4>Graphic design specialist</h4>
-              <h5>2017 - 2018</h5>
-              <p><em>Stepping Stone Advertising, New York, NY</em></p>
-              <p>
+              <h4>Full Stack developer</h4>
+              <h5>July 2020 - Present</h5>
+              <p><em>Net Enjoy, Aversa, CE (Italy)</em></p>
+              <!-- <p>
               <ul>
                 <li>Developed numerous marketing programs (logos, brochures,infographics, presentations, and advertisements).</li>
                 <li>Managed up to 5 projects or tasks at a given time while under pressure</li>
                 <li>Recommended and consulted with clients on the most appropriate graphic design</li>
                 <li>Created 4+ design presentations and proposals a month for clients and account managers</li>
               </ul>
-              </p>
+              </p> -->
             </div>
           </div>
         </div>
