--- a/about.html
+++ b/about.html
@@ -50,8 +50,8 @@
         <ul>
           <li><a href="index.html">Home</a></li>
           <li><a class="active" href="about.html">About</a></li>
-          <li><a href="resume.html">Resume</a></li>
-          <li><a href="portfolio.html">Portfolio</a></li>
+         <!--  <li><a href="resume.html">Resume</a></li>
+          <li><a href="portfolio.html">Portfolio</a></li> -->
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -89,9 +89,10 @@
             <div class="row">
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-rounded-right"></i> <strong>Birthday:</strong> 23 May 2001</li>
+                  <li><i class="bi bi-rounded-right"></i> <strong>Date of birth:</strong> 23 May 2001</li>
                   <li><i class="bi bi-rounded-right"></i> <strong>Website:</strong> celestinocaterino.github.io</li>
                   <li><i class="bi bi-rounded-right"></i> <strong>Phone:</strong> +39 3450640357</li>
+
                 </ul>
               </div>
               <div class="col-lg-6">
@@ -99,6 +100,7 @@
                   <li><i class="bi bi-rounded-right"></i> <strong>Age:</strong> 20</li>
                   <li><i class="bi bi-rounded-right"></i> <strong>Email:</strong> celestecaterino@gmail.com </li>
                   <li><i class="bi bi-rounded-right"></i> <strong>Freelance:</strong> Not available</li>
+
                 </ul>
               </div>
             </div>
@@ -113,12 +115,11 @@
     </section><!-- End About Section -->
 
     <!-- ======= Skills Section ======= -->
-    <section id="skills" class="skills">
+    <!-- <section id="skills" class="skills">
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
           <h2>Skills</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
         </div>
 
         <div class="row skills-content">
@@ -176,7 +177,8 @@
         </div>
 
       </div>
-    </section><!-- End Skills Section -->
+    </section> -->
+    <!-- End Skills Section -->
     
 
   </main><!-- End #main -->
