--- a/about.html
+++ b/about.html
@@ -50,7 +50,7 @@
         <ul>
           <li><a href="index.html">Home</a></li>
           <li><a class="active" href="about.html">About</a></li>
-         <!--  <li><a href="resume.html">Resume</a></li>
+          <!-- <li><a href="resume.html">Resume</a></li>
           <li><a href="portfolio.html">Portfolio</a></li> -->
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
@@ -92,6 +92,7 @@
                   <li><i class="bi bi-rounded-right"></i> <strong>Date of birth:</strong> 23 May 2001</li>
                   <li><i class="bi bi-rounded-right"></i> <strong>Website:</strong> celestinocaterino.github.io</li>
                   <li><i class="bi bi-rounded-right"></i> <strong>Phone:</strong> +39 3450640357</li>
+                  <li><i class="bi bi-rounded-right"></i> <strong>Linkedin:</strong> linkedin.com/in/celestino-caterino/</li>
 
                 </ul>
               </div>
@@ -100,6 +101,7 @@
                   <li><i class="bi bi-rounded-right"></i> <strong>Age:</strong> 20</li>
                   <li><i class="bi bi-rounded-right"></i> <strong>Email:</strong> celestecaterino@gmail.com </li>
                   <li><i class="bi bi-rounded-right"></i> <strong>Freelance:</strong> Not available</li>
+                  <li><i class="bi bi-rounded-right"></i> <strong>Github:</strong> github.com/CelestinoCaterino</li>
 
                 </ul>
               </div>
