--- a/about.html
+++ b/about.html
@@ -92,7 +92,6 @@
                   <li><i class="bi bi-rounded-right"></i> <strong>Date of birth:</strong> 23 May 2001</li>
                   <li><i class="bi bi-rounded-right"></i> <strong>Website:</strong> celestinocaterino.github.io</li>
                   <li><i class="bi bi-rounded-right"></i> <strong>Phone:</strong> +39 3450640357</li>
-                  <li><i class="bi bi-rounded-right"></i> <strong>Linkedin:</strong> linkedin.com/in/celestino-caterino/</li>
 
                 </ul>
               </div>
@@ -101,15 +100,11 @@
                   <li><i class="bi bi-rounded-right"></i> <strong>Age:</strong> 20</li>
                   <li><i class="bi bi-rounded-right"></i> <strong>Email:</strong> celestecaterino@gmail.com </li>
                   <li><i class="bi bi-rounded-right"></i> <strong>Freelance:</strong> Not available</li>
-                  <li><i class="bi bi-rounded-right"></i> <strong>Github:</strong> github.com/CelestinoCaterino</li>
 
                 </ul>
               </div>
             </div>
-           <!--  <p>
-              Officiis eligendi itaque labore et dolorum mollitia officiis optio vero. Quisquam sunt adipisci omnis et ut. Nulla accusantium dolor incidunt officia tempore. Et eius omnis.
-              Cupiditate ut dicta maxime officiis quidem quia. Sed et consectetur qui quia repellendus itaque neque. Aliquid amet quidem ut quaerat cupiditate. Ab et eum qui repellendus omnis culpa magni laudantium dolores.
-            </p> -->
+           <p>Visit my <a href="https://www.linkedin.com/in/celestino-caterino/">Linkedin account</a>  and my projects on <a href="https://github.com/CelestinoCaterino">GitHub</a></p>
           </div>
         </div>
 
