--- a/about.html
+++ b/about.html
@@ -104,7 +104,7 @@
                 </ul>
               </div>
             </div>
-           <p>Visit my <a href="https://www.linkedin.com/in/celestino-caterino/">Linkedin account</a>  and my projects on <a href="https://github.com/CelestinoCaterino">GitHub</a></p>
+           <p>Visit my <a href="https://www.linkedin.com/in/celestino-caterino/">Linkedin account</a>  and view my projects on <a href="https://github.com/CelestinoCaterino">GitHub</a>.</p>
           </div>
         </div>
 
