--- a/about.html
+++ b/about.html
@@ -84,7 +84,7 @@
           <div class="col-lg-8 pt-4 pt-lg-0 content">
             <h3>Full stack developer</h3>
             <p class="font-italic">
-              Hi, I'm Celestino Caterino, I was born in Naples, Italy. I'm 20 years old and I have been coding since I was 13. I currently work as a Full Stack Developer.
+              Hello, world 👋. I'm Celestino Caterino, I was born in Naples, Italy. I'm 20 years old and I have been coding since I was 13. I currently work as a Full Stack Developer.
             </p>
             <div class="row">
               <div class="col-lg-6">
